@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 21-04-2006 fixed: fixed the error in filezip properly.
  - 21-04-2006 fixed: xbmc would enable ac3 encoder if output was set to analog, but dash had ac3 enabled.
  - 21-04-2006 added: SMB ClientTimeOut to SMB Client GUI Settings
  - 21-04-2006 fixed: Samba GUI Settings: SambaDosCodepage change effects to SambaWinsServer !!
